# lydaq

./: CMake.defs  CMakeLists.txt  README.md  SConstruct  clean  compile  deploy.sh  docker_lydaq_install.sh  lydaq_install  lydaq_install_buster  minimal_install  postinstall.sh
analysis/rootwriter/: CMakeLists.txt  SConscript
analysis/rootwriter/include/: SdhcalDifAccess.hh
analysis/rootwriter/src/: SdhcalDifAccess.cc  bin23.cc
analysis/sdhcal/: CMakeLists.txt  SConscript
analysis/sdhcal/include/: SdhcalDifAccess.hh
analysis/sdhcal/src/: SdhcalDifAccess.cc
analysis/shmwriter/: CMakeLists.txt  SConscript
analysis/shmwriter/include/: shmwriterProcessor.hh
analysis/shmwriter/src/: shmwriterProcessor.cxx
apps/: CMakeLists.txt  SConstruct  SConstruct.docker  clean  compile
apps/Bmp/: SConscript
apps/Bmp/include/: LBmpServer.hh
apps/Bmp/src/: LBmpDaemon.cxx  LBmpServer.cxx
apps/Builder/: SConscript
apps/Builder/include/: Builder.hh
apps/Builder/src/: Builder.cxx  BuilderDaemon.cxx
apps/C3I/: SConscript
apps/C3I/include/: C3iManager.hh  C3iMpi.hh  MpiInterface.hh
apps/C3I/src/: C3iDaemon.cxx  C3iManager.cc  C3iMpi.cc  MpiInterface.cc
apps/C4I/: SConscript
apps/C4I/include/: C4iInterface.hh  C4iManager.hh
apps/C4I/src/: C4iDaemon.cxx  C4iManager.cc  board.cc  datahandler.cc  interface.cc  registerhandler.cc  slchandler.cc  sockethandler.cc
apps/Caen/: SConscript
apps/Caen/include/: LCaenServer.hh
apps/Caen/src/: LCaenDaemon.cxx  LCaenServer.cxx
apps/ConfigurationDB/: SConscript
apps/ConfigurationDB/include/: DIFDBInterface.hh  DIFDBManager.hh  DIFFirmwareFormat.h  DbCache.hh  DbLogger.hh  ORacleDIFDBInterface.hh  OracleDIFDBInterface.hh  UsbDIFSettings.h
apps/ConfigurationDB/src/: DIFDBInterface.cxx  DbCache.cxx  DbCacheDaemon.cxx  OracleDIFDBInterface.cxx  testdb.cxx
apps/Control/: SConscript
apps/Control/include/: FullDaq.hh  FullSlow.hh
apps/Control/src/: FDaqDaemon.cxx  FSlowDaemon.cxx  FullDaq.cxx  FullSlow.cxx
apps/DIF/: SConscript
apps/DIF/include/: DIFInterface.hh  DIFManager.hh
apps/DIF/src/: DIFDaemon.cxx  DIFInterface.cc  DIFManager.cc
apps/Dif/: SConscript
apps/Dif/include/: LDIF.hh  LDIFServer.hh
apps/Dif/src/: LDIF.cxx  LDIFDaemon.cxx  LDIFServer.cxx
apps/FEBV1/: SConscript
apps/FEBV1/include/: Febv1Interface.hh
apps/FEBV1/src/: Febv1Daemon.cxx  Febv1Manager.cc  board.cc  datahandler.cc  interface.cc  registerhandler.cc  sockethandler.cc
apps/FebCms/: SConscript
apps/FebCms/include/: .#WiznetTest.hh  MessageHandler.hh  PRBSlow.hh  PRSlow.hh  TdcConfigAccess.hh  TdcWiznet.hh  WiznetInterface.hh  WiznetManager.hh  WiznetMessageHandler.hh  WiznetTest.hh
apps/FebCms/src/: FebDaemon.cxx  MessageHandler.cc  TdcConfigAccess.cc  TdcWiznet.cc  TestTdc.cxx  WiznetInterface.cc  WiznetManager.cc  WiznetMessageHandler.cc  WiznetTest.cc
apps/FebInj/: SConscript
apps/FebInj/include/: FebInjServer.hh
apps/FebInj/src/: FebInjDaemon.cxx  FebInjServer.cxx
apps/GPIO/: SConscript
apps/GPIO/include/: LGpioServer.hh
apps/GPIO/src/: LGpioDaemon.cxx  LGpioServer.cxx
apps/GRICV0/: SConscript
apps/GRICV0/include/: Gricv0Interface.hh  Gricv0Manager.hh
apps/GRICV0/src/: Gricv0Daemon.cxx  Gricv0Manager.cc  datahandler.cc  registerhandler.cc  sockethandler.cc
apps/Genesys/: SConscript
apps/Genesys/include/: LGenesysServer.hh
apps/Genesys/src/: LGenesysDaemon.cxx  LGenesysServer.cxx
apps/Gric/: GricAccess.py  SConscript
apps/Gric/include/: GricManager.hh  GricManager.hh~  GricMpi.hh  HR2ConfigAccess.hh  HR2Slow.hh  MessageHandler.hh  MpiInterface.hh  MpiMessageHandler.hh  debug.hh
apps/Gric/src/: GricDaemon.cxx  GricManager.cc  GricMpi.cc  HR2ConfigAccess.cc  MessageHandler.cc  MpiInterface.cc  MpiMessageHandler.cc  TestTdc.cxx  scannet.cc
apps/MBMDCC/: SConscript
apps/MBMDCC/include/: MBMDCCInterface.hh
apps/MBMDCC/src/: MBMDCCDaemon.cxx  MBMDCCManager.cc  board.cc  interface.cc  registerhandler.cc  sockethandler.cc
apps/Mdcc/: SConscript
apps/Mdcc/include/: LMdccServer.hh
apps/Mdcc/src/: LMdccDaemon.cxx  LMdccServer.cxx
apps/MdccEcal/: SConscript
apps/MdccEcal/include/: LMdccEcalServer.hh
apps/MdccEcal/src/: LMdccEcalDaemon.cxx  LMdccEcalServer.cxx
apps/MonitorSupervisor/: SConscript
apps/N1470/: SConscript
apps/N1470/src/: LN1470Daemon.cxx  (+1 more)
apps/PMR/: SConscript
apps/Sdcc/: SConscript
apps/Tdc/: SConscript
apps/TdcCms/: SConscript  TdcAccess.py  cor_748095.py  cor_748103.py  cor_748105.py  cor_748117.py  cor_748120.py
apps/Wiener/: SConscript
apps/Zup/: SConscript
apps/hih8000/: SConscript
apps/include/: MessageHandler.hh  PRSlow.hh  TdcFpga.hh  TdcManager.hh  TdcMessageHandler.hh
apps/mongoroc/: MongoRoc.py  OracleTdcAccess.py  asiclist.json  connectMongo.py  dot_mongoroc.json  justasics.json  lyondb.py  mgroc  mongodb_install_buster  wddc.py  webMongoRoc.py  webdimdaq.py
apps/monitoring/: SConscript  slowdb.sqlite
drivers/: CMakeLists.txt  SConstruct  SConstruct.nonworking  clean  compile
drivers/Bmp/: SConscript
drivers/Caen/: SConscript  test.cc
drivers/Dif/: SConscript
drivers/FebInj/: .sconsign.dblite  SConscript
drivers/Ftdi/: SConscript
drivers/GPIO/: .sconsign.dblite  SConscript
drivers/Genesys/: SConscript  genesys.py
drivers/MPI/: SConscript
drivers/Mdcc/: SConscript
drivers/MdccEcal/: SConscript
drivers/MgRoc/: SConscript
drivers/N1470/: SConscript  n1470.py
drivers/Sdcc/: SConscript
drivers/TmvDb/: LTMVDB.i  SConscript
drivers/Wiener/: Lisez_Moi.txt  SConscript  install
drivers/Zup/: SConscript  testzup.cxx  zup.py
drivers/common/: LSDHCALcommon.i  SConstruct
drivers/hih8000/: SConscript
drivers/utils/: ilcconfdb  ssh_config
monitoring/: CMakeLists.txt  SConstruct
monitoring/bmp/: SConscript
monitoring/genesys/: SConscript
monitoring/grstore/: SConscript
monitoring/hih/: SConscript
monitoring/mgstore/: SConscript
monitoring/scripts/: MongoSlow.py  fsmctrl.py  mgslow  scan_lyon_slow.py  slaccess
monitoring/syx27/: SConscript
monitoring/wiener/: SConscript
monitoring/zup/: SConscript
(+272 files in other folders)
